--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ target_include_directories(gattclient PUBLIC lib/bluez)
 
 add_executable(t_minipro ${BLUEZ_SRC}
   src/minipro/minipro.cpp
+  src/minipro/packet.cpp
+  src/minipro/enter_remote_control.cpp
   src/bluetooth/bluetooth_le_client.cpp
   src/bluetooth/utils.cpp
   src/util/xbox360_controller.cpp
