Various cleanup tasks (#1)
* Begin some cleanup
* Some formatting
* Some linting and cleanup
* Updates
* Refactoring the bluetooth code
* Continue bluetooth code cleanup
* Keep working on bluetooth code
* Begin creating packets
* Update CMakeLists
* Add more packets
* More packet work
* Use base class for all packets
* Add a send_packet function to factor out common code
* Create libraries
* Add a .gitignore file
* More refactoring
* Fix some byte ordering issues
* Shut down cleanly

Co-authored-by: Michael Jeronimo <michael.jeronimo@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.0)
+project(minipro)
 
-project(gattclient)
+set(CMAKE_CXX_STANDARD 17)
 
 list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-find_package(PkgConfig REQUIRED)
 find_package(Log4cxx REQUIRED)
+find_package(PkgConfig REQUIRED)
 
-pkg_search_module(BLUEZ REQUIRED bluez)
 pkg_search_module(GLIB REQUIRED glib-2.0)
 
 include_directories(include ${GLIB_INCLUDE_DIRS})
@@ -28,17 +28,36 @@ add_library(bluez STATIC
   lib/bluez/uuid.c
 )
 
+add_library(minipro STATIC
+  src/minipro/minipro.cpp
+  src/minipro/packet.cpp
+  src/minipro/drive.cpp
+  src/minipro/enter_remote_control_mode.cpp
+  src/minipro/exit_remote_control_mode.cpp
+)
+target_include_directories(minipro PUBLIC lib/bluez)
+
+add_library(bluetooth STATIC
+  src/bluetooth/le_client.cpp
+  src/bluetooth/l2_cap_socket.cpp
+  src/bluetooth/utils.cpp
+)
+target_include_directories(bluetooth PUBLIC lib/bluez)
+
+add_library(util STATIC
+  src/util/xbox360_controller.cpp
+  src/util/joystick.cpp
+  src/util/loop_rate.cpp
+)
+
 add_executable(gattclient ${BLUEZ_SRC} lib/bluez/btgattclient.c)
 target_link_libraries(gattclient bluez ${GLIB_LDFLAGS})
 target_include_directories(gattclient PUBLIC lib/bluez)
 
-add_executable(minipro ${BLUEZ_SRC}
-  src/minipro/main.cpp 
-  src/minipro/minipro.cpp
-  src/bluetooth/bluetooth_le_device.cpp
-  src/bluetooth/utils.cpp
-  src/util/joystick.cpp
-  src/util/loop_rate.cpp
-)
-target_link_libraries(minipro bluez ${GLIB_LDFLAGS} pthread)
-target_include_directories(minipro PUBLIC lib/bluez src/util)
+add_executable(t_minipro ${BLUEZ_SRC} test/minipro/t_minipro.cpp )
+target_link_libraries(t_minipro minipro bluetooth util bluez ${GLIB_LDFLAGS} pthread)
+target_include_directories(t_minipro PUBLIC lib/bluez)
+
+add_executable(t_joystick test/joystick/t_joystick.cpp)
+target_link_libraries(t_joystick util pthread)
+
